--- a/index.html
+++ b/index.html
@@ -1,58 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        #navbar {
-            background-color: #333;
-            /* Black background color */
-            position: fixed;
-            /* Make it stick/fixed */
-            top: -50px;
-            /* Hide the navbar 50 px outside of the top view */
-            width: 100%;
-            /* Full width */
-            transition: top 0.3s;
-            /* Transition effect when sliding down (and up) */
-        }
-
-        /* Style the navbar links */
-        #navbar a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            text-decoration: none;
-        }
-
-        #navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-    </style>
+	<title>
+		Slide Down a Navigation Bar on Scroll
+		using HTML CSS and JavaScript
+	</title>
+	
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1">
+	
+	<style>
+	
+		/* styling article tag component */
+		article {
+			position: fixed;
+			margin-left: 10px;
+		}
+		
+		/* styling navlist */
+		#navlist {
+			background-color: #0074D9;
+			position: fixed;
+			left: 45%;
+			top: -60px;
+			width: auto;
+			display: block;
+			transition: top 0.3s;
+		}
+		
+		/* styling navlist anchor element */
+		#navlist a {
+			float: left;
+			display: block;
+			color: #f2f2f2;
+			text-align: center;
+			padding: 12px;
+			text-decoration: none;
+			font-size: 15px;
+		}
+		
+		/* hover effect of navlist anchor element */
+		#navlist a:hover {
+			background-color: #ddd;
+			color: black;
+		}
+	</style>
 </head>
 
 <body>
-    <div id="navbar">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-    </div>
-    <script>
-        window.onscroll = function () { scrollFunction() };
+	
+	<!-- logo with tag -->
+	<article>
+		<h1 style="color:green;">
+			GeeksforGeeks
+		</h1>
+		
+		<b>
+			A Computer Science 
+			Portal for Geeks
+		</b>
+		
+		
+<p>
+			How many times were you frustrated while
+			looking out for a good collection of
+			programming/algorithm/interview questions?
+			What did you expect and what did you get?
+			This portal has been created to provide
+			well written, well thought and well
+			explained solutions for selected questions.
+		</p>
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("navbar").style.top = "0";
-            } else {
-                document.getElementById("navbar").style.top = "-50px";
-            }
-        }
-    </script>
+	</article>
+	
+	<!-- Navbar items -->
+	<div id="navlist">
+		<a href="#">Home</a>
+		<a href="#">About Us</a>
+		<a href="#">Our Products</a>
+		<a href="#">Careers</a>
+		<a href="#">Contact Us</a>
+	</div>
+
+	<!-- for creating scroll -->
+	<div class="scrollable"
+		style="padding:15px 15px 4500px;">
+	</div>
+
+	<script>
+	
+		// When the user scrolls down then
+		// slide down the navbar
+		window.onscroll = function() {
+			scroll()
+		};
+
+		function scroll() {
+			if (document.body.scrollTop > 20 || 
+					document.documentElement.scrollTop > 20)
+			{
+				document.getElementById("navlist").style.top
+							= "0";
+			}
+			else {
+				document.getElementById("navlist").style.top
+							= "-60px";
+			}
+		}
+	</script>
 </body>
 
 </html>
