--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
 	<!-- logo with tag -->
 	<article>
 		<h1 style="color:green;">
-			GeeksforGeeks
+			Aryan's code
 		</h1>
 		
 		<b>
-			A Computer Science 
-			Portal for Geeks
+			we code here
 		</b>
 		
 		
